# elysia

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  build.sh  compile_flags.txt  elysia  elysia.sh  first.c  make.sh  output.asm  output.ir  output.s
compiler-tests/: Makefile  main.asm  main.c  test.asm  test1.s  test2.s
examples/: 1-simple-variables.ely  1-variables-and-datatype.ely  2-while-loop.ely  3-if-statement.ely  4-struct-and-typealias.ely  functions.ely  helloworld.ely  loop.ely  tests.ely  variables.ely  xx-full-features-examples.ely
runtime/: elysiart_x86-64.asm  make_runtime.sh
src/: compiler.c  compiler.h  elysia.c  elysia.h  elysia_ast.c  elysia_ast.h  elysia_backend_nasm_x86_64.c  elysia_compiler.c  elysia_compiler.h  elysia_compiler_backend_qbe.c  elysia_compiler_backend_x86_64_nasm.c  elysia_compiler_x86_64_nasm.c  elysia_lexer.c  elysia_lexer.h  elysia_parser.c  elysia_parser.h  elysia_parser_astdump.c  elysia_types.c  elysia_types.h  first.h  lexer.c  lexer.h  main.c  parser.c  parser.h  plenary.c  plenary.h  sv.h
tests/: operation.ely  test_lexer.c  tests.ely
